[metadata]
name = pywcs
version = 1.12.1.dev
stsci_wcs_version = 4.10
author = Michael Droettboom
author-email = mdroe@stsci.edu
home-page = http://www.scipy.org/AstroLib
summary = Python wrappers to WCSLIB
description-file = 
	README
	CHANGELOG
classifier = 
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.6
requires-dist = 
	pyfits (>=2.4.0)
	numpy (>=1.5.1)

[files]
packages_root = lib
packages = 
	pywcs
	pywcs.tests
data_files = 
	pywcs/include = src/*.h
	pywcs/include/wcslib = wcslib/C/*.h
	pywcs/tests/maps = lib/pywcs/tests/maps/*.hdr
	pywcs/tests/nrao = lib/pywcs/tests/nrao/*.hdr
	pywcs/tests/spectra = lib/pywcs/tests/spectra/*.hdr
	pywcs/tests/data = lib/pywcs/tests/data/*.hdr
	pywcs/tests/data = lib/pywcs/tests/data/*.fits

[install_data]
pre-hook.glob-data-files = stsci.distutils.hooks.glob_data_files

[global]
setup_hooks = 
	stsci.distutils.hooks.tag_svn_revision
	stsci.distutils.hooks.version_setup_hook
	hooks.pywcs_hook
	stsci.distutils.hooks.use_packages_root
	pywcs_setup.setup_hook

[extension=pywcs._pywcs]
sources = 
	src/distortion.c
	src/distortion_wrap.c
	src/docstrings.c
	src/pipeline.c
	src/pyutil.c
	src/pywcs.c
	src/pywcs_api.c
	src/sip.c
	src/sip_wrap.c
	src/str_list_proxy.c
	src/util.c
	src/wcslib_tabprm_wrap.c
	src/wcslib_units_wrap.c
	src/wcslib_wrap.c
	src/wcslib_wtbarr_wrap.c
	wcslib/C/flexed/wcsbth.c
	wcslib/C/flexed/wcspih.c
	wcslib/C/flexed/wcsulex.c
	wcslib/C/flexed/wcsutrn.c
	wcslib/C/cel.c
	wcslib/C/lin.c
	wcslib/C/log.c
	wcslib/C/prj.c
	wcslib/C/spc.c
	wcslib/C/sph.c
	wcslib/C/spx.c
	wcslib/C/tab.c
	wcslib/C/wcs.c
	wcslib/C/wcserr.c
	wcslib/C/wcsfix.c
	wcslib/C/wcshdr.c
	wcslib/C/wcsprintf.c
	wcslib/C/wcsunits.c
	wcslib/C/wcsutil.c
include_dirs = 
	src
	wcslib/C
	numpy
define_macros = 
	ECHO
	WCSTRIG_MACRO
	PYWCS_BUILD
	_GNU_SOURCE

[build_ext]
pre-hook.numpy-extension-hook = stsci.distutils.hooks.numpy_extension_hook

